# captioner

./: .gitignore  README.md  pyproject.toml
captioner/: __init__.py  cli.py  confidence.py  config.py  downloader.py  report.py
captioner/engines/: __init__.py  base.py  ffsubsync_engine.py
captioner/utils/: logging.py
